# cmd/api/routes.go
@@ -2,7 +2,9 @@ package main
 
 import (
 	"net/http"
+	"time"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -10,6 +12,16 @@ import (
 
 func (app *application) routes() http.Handler {
 	g := gin.Default()
+
+	config := cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Length", "Content-Type", "Authorization"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	}
+	g.Use(cors.New(config))
+
 	v1 := g.Group("/api/v1")
 	{
 
@@ -31,7 +43,8 @@ func (app *application) routes() http.Handler {
 		authGroup.PUT("/events/:id", app.updateEvent)
 		authGroup.DELETE("/events/:id", app.deleteEvent)
 		authGroup.POST("/events/:id/attendees/:userId", app.addAttendeeToEvent)
-		v1.DELETE("/events/:id/attendees/:userId", app.deleteAttendeeFromEvent)
+		authGroup.DELETE("/events/:id/attendees/:userId", app.deleteAttendeeFromEvent)
+		authGroup.GET("/users", app.getAllUsers)
 	}
 
 	g.GET("/swagger/*any", func(c *gin.Context) {
@@ -44,5 +57,3 @@ func (app *application) routes() http.Handler {
 
 	return g
 }
-
-
